share/web/css/sunriser.css
/* Summary
    - FONT
    - GLOBAL
    - CLASSES
      - Header
      - Control Center
        - Naviguation
        - Click/Touch effect
        - font awesome fix
        - NoScript
        - content
        - dialogue
      - Login
    - RESPONSIVE
      - max-width : 900px
      - max-width : 500px
      - max-width : 400px
*/

/*** FONT ***/

@font-face {
  font-family: 'DIN1451';
  src: url('../fonts/din_1451_std_mittelschrift.eot');
  src: local('☺'), url('../fonts/din_1451_std_mittelschrift.woff') format('woff'),
                  url('../fonts/din_1451_std_mittelschrift.ttf') format('truetype'),
                  url('../fonts/din_1451_std_mittelschrift.svg') format('svg');
  font-weight: normal;
  font-style: normal;
}

/*** GLOBAL ***/
*,
*:after,
*:before{
  box-sizing:border-box;
}

html,
body{
  width:100%;
  height:100%;
}

body{
  font-size: 16px;
  line-height:1.5em;
  color:#444;
  font-family:'DIN1451', 'Open Sans', 'Helvetica Neue', Helvetica, Arial, sans-serif;
  font-weight: 300;
  background : url('/img/background.jpg') no-repeat fixed center center / cover transparent;
  transform-origin: 50% 400px 0px;
}

h1{
  font-size: 2em;
  color:#f632b;
}

img{
  display:block
}
pre{
  white-space: pre-wrap;
  white-space: -moz-pre-wrap;
  white-space: -pre-wrap;
  white-space: -o-pre-wrap;
  word-wrap: break-word;
}
hr{
  border-width: 1px 0px 0px;
  border-color: #ddd;
  border-style: solid;
}

.main{
  height:100%;
  max-width:1200px;
  margin:0 auto;
  padding:0 50px;
}

/***  FORMS  ***/

.error{
  color: #ff0000;
}


/***  CLASSES  ***/
/** Header **/

header{
  height:100px;
  width:auto;
  padding-top:40px;
}
.sunriser{
  font-size:30px;
  color:white;
  float:left
}
.sunriser a{
  color:white;
  text-decoration:none;
}
.sunriser_datetime{
  text-a.first-levelgn:right;
  font-size:24px;
  color:white;
  float:right;
  padding-top: 2px;
}
/**Control center**/

.control_center{
  width: 100%;
  height: auto;
  margin-bottom:100px;
  position:relative;
  display: table;
}
.control_center > .sunriser_content{
  background-color: white;
}
/*Navigation*/

nav{
  width: 70px;
  background-color: #202731;
  height: 100%;
  text-align: center;
  position:absolute;
  z-index:4;
  min-height: 420px;
}
nav a,
nav{
  color: #a6a9ad;
  text-decoration: none;
}
nav .first-level{
  height:70px;
  padding-top: 24px;
}
nav .first-level:last-child{
  position:absolute;
  bottom:0px;
  width:70px
}
nav .first-level:hover,
nav .selected{
  cursor:pointer;
}
nav .first-level:hover{
  background-color: #1D2029;
  color:#fff;
}
nav .selected,
nav .selected a{
  color:#68D472 !important;
  width: 70px;
}
.second-nav{
  margin-left: 70px;
  position: absolute;
  color: #777;
  background: white;
  top:0;
  font-size: 18px;
  text-align: left;
  border-style:solid;
  border-color:#ccc;
  border-width: 0 1px 0 0;
  z-index:3;
  height:100%;
  overflow:hidden;
  display:none;
  width:300px; /* TODO : Also not the best solution. 
                  Have to check if something better exists */
}
.first-level .second-nav li a{
  padding: 14px 2em 0 2em;
  height:50px;
  display: block;
}
.first-level .second-nav li:hover{
  background-color:#f5f5f5
}
.second-level i:after{
  content:"";
  padding-right:1em;
}
nav h2{
  text-transform:uppercase;
  color:#777;
  padding:24px 0 0 1em;
  height:71px;
}
.first-level:hover:not(.toggle) > i{
  color: #fff;
}
.first-level.toggle::before{
  content:"";
  position:absolute;
  width:0px;
  height:0px;
  border-style:solid;
  border-color:transparent #fff transparent transparent;
  border-width:10px;
  margin: 0px 0px 0px 52px;
  left: 0;
}

/*Click/Touch effect*/

.toggle {
  color:white;
  background-color: #1D2029;
}
.toggle .second-nav{
  display:block;
}
.overlay.actif{
  background-color: transparent;
  width: 100%;
  height: 100%;
  top: 0px;
  z-index: 2;
  position:fixed;
  left:0;
  cursor:default
}
/*font awesome fix*/
.fa{
  display: initial !important;
}
.fa-2x{
  font-size:20px !important
}
/*NoScript*/

.noscript-overlay{
  position: fixed;
  background-color: rgba(0,0,0,0.75);
  height: 100%;
  z-index: 10;
  width: 100%;
}
.noscript-text{
  max-width: 500px;
  margin: -200px 0 0 -250px;
  left: 50%;
  top: 50%;
  background-color: #FFF;
  position: fixed;
  max-height: 250px;
  padding: 50px;
}
.noscript-text h2{
  color:#000;
  font-size:2em;
  margin-bottom: 1em;
}
/**  Content  **/

.sunriser_content{
  position:relative;
  padding: 40px 40px 110px 110px;
  display:block;
  max-width:1030px;
  width:100%;
  min-height: 420px;
  /*Text formating*/
  font-size:18px;
  color:#7A7A7A;
  line-height:1.5em;
}
.sunriser_content h1{ font-size:1.5em; }
.sunriser_content h2{ font-size:1.325em; }
.sunriser_content h3{ font-size:1.25em; }
.sunriser_content h4{ font-size:1.125em; }
.sunriser_content h5,h6{ font-size:1em; }

.sunriser_content h1,
.sunriser_content h2,
.sunriser_content h3,
.sunriser_content h4,
.sunriser_content h5,
.sunriser_content h6{
  color:#333;
  padding-bottom: 20px
}
.sunriser_content hr + h1,
.sunriser_content hr + h2,
.sunriser_content hr + h3,
.sunriser_content hr + h4,
.sunriser_content hr + h5,
.sunriser_content hr + h6{
  padding: 20px 0;
}
.sunriser_content a {
  color: #2980b9;
  text-decoration: none;
  border-bottom: 2px solid #97c1dd;
}
.sunriser_content input[type='password'],
.sunriser_content input[type='text']{
  background-color:white;
  padding:5px;
  border:1px solid #ccc;
  margin:5px;
}
.sunriser_content input[type='submit']{
  background-color:#2980b9;
  padding:10px;
  bottom:20px;
  /* right:70px; */
  right:20px;
  position:absolute;
  font-size: 18px;
  color: white;
  border-radius: 2px;
  border: none;
}

/**  dialogue  **/

.sunriser_dialogue{
  bottom: 0px;
  position: absolute;
  height: 70px;
  border-top: 1px solid #ddd;
  width: 100%;
  left: 0;
  padding: 20px 20px 0px 70px;
}
.help{
  position: relative;
  right: 0px;
  float: right;
  background-color: #eeeeee;
  width: 30px;
  height: 30px;
  padding: 4px 0px 0px 9px;
  font-size: 18px;
  text-decoration: none;
  color: #A6A9AD !important;
  border-radius: 50%;
  border-bottom:0px solid transparent !important;
}

.help:hover{
  color: #84878a;
}

/** Login **/

.login{
  left: 50%;
  position: relative;
  margin-left: -150px;
  width:300px;
}
.login_input{
  background-color:rgba(255,255,255,0.5);
  border:1px solid rgba(255,255,255,0.5);
  border-radius:2px;
  color:#111;
  width:300px;
  padding:10px 10px 10px 50px;
  margin-bottom: 1em;
  font-size: 16px;
}
.login::before{
  content:"";
  font-f amily:"FontAwesome";
  position:absolute;
  color:white;
  font-size:20px;
  margin:6px 0 0 5px;
  padding:5px 5px 3px 5px;
  border-right:1px solid white;
}
.login_button{
  background-color:white;
  border-radius:2px;
  border:none;
  font-size: 16px;
  color:green;
  text-align:center;
  width:300px;
  padding:10px;
  text-transform:uppercase
}
.login_button:hover{
  opacity:0.9;
}
.login_button:active{
  opacity:0.75;
}

/***  RESPONSIVE  ***/

@media screen and (max-width:900px) {
  .main{
    padding:0 10px;
  }
}
@media screen and (max-width:500px) {
  body{
    background : none;
  }
  .main{
    padding:0;
  }
  header {
      height: 50px;
      padding: 12px 0 0 12px;
      background-color: #34495e;
  }
  header span{
    display:none
  }
  .sunriser_time {
      padding-right: 20px;
  }
  nav {
      width: 100%;
      min-height: 50px;
      height: 50px;
      font-size:12px;
  }
  nav .first-level {
      height: 50px;
      width:50px;
      display: inline-block;
  }
  nav .first-level:last-child {
      right: 0px;
      bottom:auto
  }
  nav .first-level {
      float: left;
      padding-top:12px;
  }
  .second-nav{
    top:50px;
    margin-left:0px;
    border-width:0 1px 1px 1px;
  }
  nav .first-level:last-child {
    width: 50px;
  }
  .toggle .second-nav {
    display:table;
  }
  .first-level:first-child .second-nav {
      border-width: 0 1px 1px 0;
  }
  .first-level.toggle::before {
      border-color: transparent transparent #FFF transparent;
      margin: 21px 0px 0px -3px;
      left:auto
  }
  .noscript-text{
    margin: 0;
    left: 10px;
    right: 10px;
    top: 50px;
  }
  .sunriser_content {
    padding: 60px 10px 80px 10px;
    margin-left:0;
    min-height: inherit;
  }
  .control_center {
    margin-bottom: 0px;
  }

  .sunriser_dialogue{
    padding: 10px 10px 0px 10px;
    height: 50px;
  }
}

